# embedded

./: .clineignore  .gitignore  AI_CONTRACT.md  Dockerfile  Makefile  README.md  ankle_tuner.py  check_live.py  gain_tuner.py  id_check.py  leg_swing_test.py  mujoco_env_reference.py  setup.sh  source_venv.sh  test.py  zero_out.sh
.github/ISSUE_TEMPLATE/: quarterly-task.md
Dockerfiles/foxy-gpu-20.04/: Dockerfile
Dockerfiles/humble-gpu-20.04/: Dockerfile
Dockerfiles/humble-gpu-22.04/: Dockerfile
Dockerfiles/iron-gpu-22.04/: Dockerfile
Interfaces/control_core/: CMakeLists.txt
Interfaces/control_core/examples/: demo_main.cpp  demo_py.py
Interfaces/control_core/include/control_core/: api.hpp
Interfaces/control_core/python/: bindings.cpp
Interfaces/control_core/src/: api.cpp
Motor communication nodes/src/motor_control_interfaces_legacy/: CMakeLists.txt  package.xml
Motor communication nodes/src/motor_control_node/: package.xml  robstride_agent_cli.py  setup.cfg  setup.py  vla_test_server.py
Motor communication nodes/src/motor_control_node/config/: robstride_motors.yaml
Motor communication nodes/src/motor_control_node/launch/: motor_control.launch.py  setup_can0.sh
Motor communication nodes/src/motor_control_node/motor_control_node/: call_robstride_service.py  can_node.py  controller_node.py  imu_dr_rk4_node.py  imu_i2c_reader.py  imu_rk4_serial.py  motor_control.py  motor_control_node.py  srv_sample.txt  swing_leg_node.py
Motor communication nodes/src/motor_control_node/motor_control_node/imu_read/: imu_read.ino  imu_test.py
Motor communication nodes/src/motor_control_node_backup/: README.md  package.xml  robstride_motor_linux.md  setup.py
Motor communication nodes/src/motor_control_node_backup/config/: motor_can_map.yaml
Motor communication nodes/src/motor_control_node_backup/include/motor_ros2/: motor_cfg.h.old
Motor communication nodes/src/motor_control_node_backup/launch/: motor_control.launch.py
Motor communication nodes/src/motor_control_node_backup/src/: main.cpp.old  motor_cfg.cpp.old
Motor communication nodes/src/motor_control_node_backup/src/motor_control_node/: motor_control.py  robstride_motor_linux.py
Ros2_with_thread/humanoid_arm_description/: CMakeLists.txt  package.xml
Ros2_with_thread/humanoid_arm_description/launch/: display.launch.py
Ros2_with_thread/humanoid_arm_description/urdf/: test_arm.urdf
Ros2_with_thread/motor_control_hybrid/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml  requirements.txt  setup.py
Ros2_with_thread/motor_control_hybrid/config/: motors.yaml
Ros2_with_thread/motor_control_hybrid/include/control_core/: types.hpp
Ros2_with_thread/motor_control_hybrid/launch/: hybrid_control.launch.py
Ros2_with_thread/motor_control_hybrid/motor_control_hybrid/: motor_sdk_gateway_node.py  policy_bridge_node.py  python_can_node.py  python_can_node_indiv_thread.py  robstride_motor_linux.py  target_gateway_node.py
Ros2_with_thread/motor_control_hybrid/src/: controller.cpp  cpp_control_node.cpp
ctrl_scripts/: leg_swing_test.py  robot_interface.py  run_policy.py  run_policy_config.json  run_policy_validation.py  run_policy_w_timer.py
data_collection/: README.md  README_IK_RUNS.md  README_IK_RUNS_FULL.md  analyze_dataset_metrics.py  collect_motor_dataset.py  compare_position_conventions.py  convert_ik_per_motor.py  dataset_metrics_sim2real_report.txt  ik_all_10_joints.csv  ik_motors_6_10.csv  ik_single_motor_commands.txt  ik_single_motor_commands_6_to_10.txt  make_ik_csv_subset.py  move_to_default_pose.py  runs.txt
embedded/: general_system_notes.txt  ros2_notes.txt
esp_can_test/: .gitignore  CMakeLists.txt  README.md  can_utils.py  examples.py  main.py  pc_client.py  requirements.txt
humanoid_arm_description/: package.xml
humanoid_arm_moveit_config/: CMakeLists.txt  package.xml
humanoid_control/motor_control_hybrid/: CMakeLists.txt  package.xml  requirements.txt  setup.py  test_position_command.sh
humanoid_control/motor_control_hybrid/config/: control_config.yaml  motors.yaml  policy_bridge_config.json
humanoid_control/motor_control_hybrid/include/control_core/: controller.hpp
humanoid_control/motor_control_hybrid/launch/: hybrid_control.launch.py
humanoid_control/motor_control_hybrid/motor_control_hybrid/: double_pendulum_websocket_node.py  fake_motor_node.py  python_can_node_indiv_thread.py.old  robot_sdk_pb2_grpc.py
humanoid_control/motor_control_interfaces/: CMakeLists.txt  package.xml
humanoid_control/motor_control_interfaces/msg/: MotorCommand.msg
humanoid_description/: CMakeLists.txt
humanoid_leg_description/: CMakeLists.txt  README.md  package.xml
humanoid_leg_moveit_config/: CMakeLists.txt  README.md  package.xml
humanoid_moveit_config/: CMakeLists.txt  package.xml
humanoid_moveit_config/config/: ompl_planning.yaml
humanoid_moveit_config/launch/: demo.launch.py  moveit.rviz
imu_process/: can_read_imu.py  fusion.py  main_serial.py  math3d.py  quat.py
imu_read/: imu_test.py
robstride_dynamics/: __init__.py  bus.py
rosenv/: pyvenv.cfg
scripts/: setup_rosenv.sh
sdk_prototype/: README.md  __init__.py  requirements.txt
trajectory_generation/: README.md  evaluate_ik_stepping_trajectory_mujoco.py  generate_ik_stepping_trajectory.py  human_offset_corrected.urdf  ik_standing_leg_swing.csv  ik_standing_leg_swing_fast.csv  ik_standing_leg_swing_fast_meta.json  ik_standing_leg_swing_fast_short.csv  ik_standing_leg_swing_fast_short_meta.json  ik_standing_leg_swing_fast_tall.csv  ik_standing_leg_swing_fast_tall_faster.csv  ik_standing_leg_swing_fast_tall_faster2.csv  ik_standing_leg_swing_fast_tall_faster2_meta.json  ik_standing_leg_swing_fast_tall_faster_meta.json  ik_standing_leg_swing_fast_tall_meta.json  ik_standing_leg_swing_meta.json  ik_stepping_meta.json  ik_stepping_trajectory.csv  ik_stepping_y_big.csv  ik_stepping_y_big.json  scene.xml  traj_contact.csv  traj_contact_meta.json
utils/: actuation_safety.py  ankle_fv.py  ankle_gain_tuner_no_plot.py  dummy_live.py  gain_tuner.py  imu_noise_est.py  imu_read.py  stream_imu.py  stream_imu_can.py
(+286 files in other folders)
