<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_control_hybrid</name>
  <version>0.0.0</version>
  <description>Hybrid motor control: Python CAN + C++ Control</description>
  <maintainer email="rul039@ucsd.edu">rcli</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>motor_control_interfaces</build_depend>
  <build_export_depend>motor_control_interfaces</build_export_depend>
  <exec_depend>motor_control_interfaces</exec_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
