<?xml version="1.0"?>
<package format="3">
  <name>motor_control_interfaces_legacy</name>
  <version>0.0.0</version>
  <description>Legacy interfaces (services) for motor_control_node</description>
  <maintainer email="rul039@ucsd.edu">rcli</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
