<package format="3">
  <name>motor_control_node</name>
  <version>0.0.0</version>
  <description>ROS2 Python package for RobStride motor control</description>
  <maintainer email="rul039@ucsd.edu">rcli</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>motor_control_interfaces</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
